# drcautomation

./: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
drcautomation/: __init__.py  classify.py  cli.py  diff.py  gate.py  group.py  parser.py  stream.py
tests/: test_group_diff.py  test_parser.py  test_stream.py  test_v4_gate.py
