[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drcautomation"
version = "0.1.0"
description = "Design Rule Check automation — parse, classify, and diff DRC violations across layout runs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAY-5" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
drcrun = "drcautomation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["drcautomation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
